src/main/java/com/example/vtpnano/errors/EventNotFoundException.java
package com.example.vtpnano.errors;public class EventNotFoundException {
}
